--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,9 +2,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ dev/1.21.20 ]
+    branches: [ dev/zhmurkov ]
   pull_request:
-    branches: [ dev/1.21.20 ]
+    branches: [ dev/zhmurkov ]
 jobs:
   build:
     runs-on: ubuntu-latest
